# RtmpKit

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Library.cmake  PlatformAndroid.cmake  PlatformGeneric.cmake  Sources.cmake  build-android.sh  build-ios.sh  codestyle.xml  conanfile.txt  setup-native-builds.bat  setup-native-builds.sh
aar/: .project
aar/module/: proguard-rules.pro
include/: filetype.h  network_types.h
include/apple/: KBBroadcasterSessionDelegate.h  KBBroadcasterSessionView.h  KBLibConfig.h  KBNetworkConfiguration.h  KBRtmpBroadcasterSessionView.h  KBRtmpSessionSettings.h  KBRtmpWatcherSessionView.h  KBSession.h  KBWatcherSessionDelegate.h  KBWatcherSessionView.h
private/: audio_render_item.h  audiodescriptor.h  buffer_queue.h  bufferable.h  constants.h  logger.h  mediaheader.h  mediaitem.h  mediatag.h  mediautils.h  multicast_delegate.h  network_performance_metrics.h  network_speed_indicator.h  parsable.h  player.h  queue.h  reader.h  semaphore.h  targets.h  typed_tag.h  typified.h  utils.h  videodescriptor.h
private/amf/: amf.h  types.h
private/apple/: KBAVAudioSessionManager.h  KBAudioCaptureSession.h  KBAudioCaptureSessionDelegate.h  KBAudioRendererSession.h  KBAudioRendererSessionDelegate.h  KBFLVMediaTags.h  KBFLVReader.h  KBOpenGLBasedPreviewView.h  KBRtmpBroadcasterSessionView.h  KBUtility.h  KBVideoCaptureSession.h  KBVideoCaptureSessionView.h  KBVideoCompressorSession.h  KBVideoCompressorSessionDelegate.h  (+2 more)
src/: audio_render_item.cc  audiodescriptor.cc  mediatag.cc  mediautils.cc  network_performance_metrics.cc  network_speed_indicator.cc  reader.cc  semaphore.cc  targets.cc  typed_tag.cc  videodescriptor.cc
tests/: CMakeLists.txt  utils.h
tests/rtmp/: CMakeLists.txt  rtmp_broadcaster_test.cc  rtmp_watcher_test.cc  socket_test.cc
(+148 files in other folders)
